--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
 <body>
     <h1>person_dict{"3.1", "3.2", "3.3"}</h1>
     За {% gen_info{"Месец", "Година"}%} г.
-    Работни часови: gen_info{"Работни часови"}  
+    Работни часови: person_dict{"3.6"}  
         
     <table>
     <tr>
